--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -46,6 +46,64 @@ table {
 
 /******************************** END RESET *********************************/
 
+/******* Intro *****/
+
+#intro{
+	position:absolute;
+	width:100%;
+	height:100%;
+	background-color:white;
+
+	.header{
+		width:100%;
+		height:195px;
+		background-color:white;
+
+
+		.logotype > img {
+		    left: 44px;
+		    position: absolute;
+		    top: 76px;
+		}
+
+		.line {
+		    background-color: #fba72c;
+		    height: 6px;
+		    left: 332px;
+		    position: absolute;
+		    top: 130px;
+		    width: calc(100% - 335px);
+		}
+	}
+
+	.content{
+
+		.title {
+		    height: 194px;
+		    top: 10px;
+		    width: 100%;
+		    text-align: center;
+		}
+
+		.title img{
+			max-width:696px;
+			width:100%;
+			height:auto;
+		}
+
+		.mountain {
+		    float: right;
+		}
+	}
+
+	.footer{
+			background: #fba72c none repeat scroll 0 0;
+		    bottom: 0;
+		    height: 100px;
+		    position: fixed;
+		    width: 100%;
+	}
+}
 
 $primary-color: #3bbfce;
 $margin: 16px;
